2009-02-02  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* file-utimes.c (diskfs_S_file_utimes): Use st_atim.tv_sec/
	st_mtim.tv_sec members instead of st_atime/st_mtime.  Also set
	st_atim.tv_nsec/st_mtim.tv_nsec members.

2008-08-21  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* dir-lookup.c (diskfs_S_dir_lookup): Initialize NEWPI and NEWPO to
	0, set back to 0 when they do not need to be referenced any more,
	dereference them if needed just before exit, after all unlocking.

2008-08-20  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* dir-lookup.c (diskfs_S_dir_lookup): Revert 2008-06-06 change, as it
	breaks when np == dnp.

2008-06-10  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* dir-lookup.c (diskfs_lookup): Add const qualifier to parameter
	`name'.
	* diskfs.h (diskfs_lookup): Likewise.

2008-06-06  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* dir-lookup.c (diskfs_S_dir_lookup): Unlock np in case of errors.

2007-11-15  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* dir-rename.c (diskfs_S_dir_rename): Call diskfs_nput (tnp) in
	the EISDIR and EMLINK cases too.  Reported by Olaf Buddenhagen
	<olafbuddenhagen@gmx.net>.

2007-11-13  Thomas Schwinge  <tschwinge@gnu.org>

	* node-times.c (diskfs_set_node_times): Adapt to ``struct stat''
	changes.

2007-10-05  Thomas Schwinge  <tschwinge@gnu.org>

	* node-times.c (diskfs_set_node_atime): Fix typo from last commit.

2007-08-16  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* diskfs.h (diskfs_set_node_atime): New declaration.
	* node-times.c (diskfs_set_node_atime): New function.

2007-04-04  Thomas Schwinge  <tschwinge@gnu.org>

	* opts-std-startup.c (parse_startup_opt)
	<_diskfs_no_inherit_dir_group>: Swap the options into the correct
	order.  Reported by Olaf Buddenhagen <olafbuddenhagen@gmx.net>.

2006-06-28  Thomas Schwinge  <tschwinge@gnu.org>

	* Makefile (HURDLIBS): Add `pager'.

2006-03-15  Thomas Schwinge  <tschwinge@gnu.org>

	* priv.h: Include <argp.h>.
